filters: try to address some of the flaky tests on windows